Fix loadable message not centred

--- a/style/component/Loadable.scss
+++ b/style/component/Loadable.scss
@@ -62,6 +62,7 @@
 		
 		&-message {
 			width: fit-content;
+			margin: auto;
 		}
 		
 		&-bar {
